# troposim

./: .gitignore  LICENSE.txt  README.md  environment-ui.yaml  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: conf.py  differences-from-mintpy.md  frac.c  fractal-surfaces-vs-gaussian-random-fields.html  fractal-surfaces-vs-gaussian-random-fields.md  index.rst
notebooks/: ui.ipynb
src/troposim/: __init__.py  _blocks.py  _types.py  analysis.py  constants.py  covariance.py  decorrelation.py  deramp.py  global_coherence.py  igrams.py  log.py  plotting.py  simulated_stack.py  stratified.py  turbulence.py  ui.py  utils.py
src/troposim/deformation/: __init__.py  geertsma.py  synthetic.py
tests/: test_turbulence.py
troposim/: analysis.py  decorrelation.py  deramp.py  igram_sim.py  igrams.py  log.py  plotting.py  simulated_stack.py  stratified.py  turbulence.py  utils.py
troposim/deformation/: geertsma.py  okada.py  synthetic.py
troposim/tests/: test_turbulence.py
