# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = troposim
description = Simulate InSAR tropospheric noise
author = scott
author_email = scott.stanie@gmail.com
license = mit
long_description = file: README.md
long_description_content_type = text/markdown
charset=UTF-8
variant=GFM
version = 0.1.0
# url = https://github.com/scottstanie/troposim/
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
Development Status :: 4 - Beta
Programming Language :: Python
keywords =
insar
simulation
troposphere
turbulence
remote-sensing
sar
synthetic-aperture-radar

[options]
package_dir = =src
zip_safe = False
packages = find:
include_package_data = True
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
# setup_requires = pyscaffold>=3.3a0,<4
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
numpy
scipy
tqdm
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.7
tests_require = pytest >=6.0

[options.packages.find]
where = src

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install troposim[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
testing =
pytest

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = troposim.module:function
# For example:
# console_scripts =
#     fibonacci = troposim.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# addopts =
# --cov troposim --cov-report term-missing
# --verbose
# norecursedirs =
# dist
# build
# .tox
# testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max-line-length = 88
extend-ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
.tox
build
dist
.eggs
docs/conf.py
__init__.py
